--- a/public/mainPage.html
+++ b/public/mainPage.html
@@ -14,14 +14,13 @@
         #container{overflow: auto;}
     </style>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+<body>
+  <h1 align="center">Welcome to RiskBudur! </h1>
 
     <div class="container">
     	<div class="row">
     		<div class ="col-md-6 offset-md-3 col-sm-12">
-    			<h1 class="text-center">
-    			MongoChat</h1>
+    			<h1 align="center" class="text-center"><a href="/get_map"><strong>GET MAP </strong></a></h1>
     			<button id="clear" class="btn btn-danger">Clear</button>
     			<div id="status"></div>
     			<div id="chat">
@@ -29,6 +28,7 @@
     				<br>
     				<div class="card">
     					<div id="messages" class="card-block">
+						aanann
     					</div>
     				</div>
     				<br>
@@ -38,8 +38,7 @@
     		</div>
     	</div>
     </div>
-
-    <script>
+	<script>
     	(function(){
     		var element = function(id)
     		{
@@ -59,16 +58,6 @@
     		// Set the status
     		var setStatus = function(s){
     			status.textContent = s;
-
-                /*
-    			if(s !== statusDefault)
-	    		{
-	    			var delay = setTimeOut(function(){
-	    				setStatus(statusDefault);
-	    			}, 4000); // 4 seconds later
-	    		}
-                */
-
     		}
 
     		// Connect to socket.io
@@ -88,10 +77,20 @@
     				for (i = 0; i < data.length; i++)
     				{
     					var message = document.createElement('div');
-    					messages.setAttribute('', 'chat-message');
-    					message.textContent = data[i].name+ ": " + data[i].message+"hello";
+    					messages.setAttribute('class', 'chat-message');
+                        if(data[i].name != undefined){ // If it is a chat message
+    					message.textContent = data[i].name+ ": " + data[i].message;
+                    }                      
+      // Buradan territories tablosundaki veriler çekiliyor 'output' u bir bulut veya havuz gibi düşün database chats ve territories tablolarını boşaltıyormuş gibi düşün
+      // aşağıdaki check şu işe yarıyor gelen data bir chats mi yoksa territory mi diye
+      
+                        else if(data[i].tname != undefined){ // If it is a territory name
+                        message.textContent = "territory name: "+ data[i].tname+ ", neighbors: " + data[i].neighbors + " ownsto: " + data[i].ownsto;
+                        }
+
+
     					messages.append(message);
-    					messages.insertBefore(message, messages.firstChild);
+    					//messages.insertBefore(message, messages.firstChild);
     				}
     			}
     			console.log(data);
@@ -112,7 +111,7 @@
 
     		// Handle Input
     		textarea.addEventListener('keydown', function(event){
-    			if(event.which === 13 && event.shiftKey == false){ // enter tuşu
+    			if(event.which === 13 && event.shiftKey == false){ // enter tusu
     				// Emit to server input
     				console.log(textarea.value);
     				socket.emit('input', {
@@ -128,5 +127,5 @@
     	})(); 
     </script>
 
-  </body>
+</body>
 </html>
